--- a/css/xceed.css
+++ b/css/xceed.css
@@ -16,16 +16,6 @@ body, html {
   height: 100%;
 }
 
-body {
-  background: #f9f9f9;
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-  font-family: helvetica, arial, tahoma, verdana;
-  line-height: 20px;
-  font-size: 14px;
-  color: #726f77;
-}
 
 img {
   max-width: 100%;
@@ -50,33 +40,6 @@ h1, h2, h3, h4 {
   padding: 10px 0;
 }
 
-header {
-  background: #2b2e48;
-  padding: 10px;
-  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
-  -ms-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.05);
-}
-header .logo {
-  color: rgb(41, 116, 113);
-  float: left;
-  font-family: "Dosis", arial, tahoma, verdana;
-  font-size: 22px;
-  font-weight: 500;
-}
-header .logo > span {
-  color: #f7aaaa;
-  font-weight: 300;
-}
-header .social {
-  float: right;
-}
-header .social .btn {
-  font-family: "Dosis";
-  font-size: 14px;
-  margin: 10px 5px;
-}
 
 #timeline {
   width: 100%;
@@ -92,7 +55,7 @@ header .social .btn {
   content: "";
   width: 3px;
   height: 100%;
-  background: rgb(41, 116, 113);
+  background: rgb(72, 42, 0);
   left: 50%;
   top: 0;
   position: absolute;
@@ -108,7 +71,7 @@ header .social .btn {
   position: relative;
 }
 #timeline .timeline-item .timeline-icon {
-  background: rgb(41, 116, 113);
+  background: rgb(72, 42, 0);
   width: 50px;
   height: 50px;
   position: absolute;
@@ -145,7 +108,7 @@ header .social .btn {
 }
 #timeline .timeline-item .timeline-content .title {
   padding: 15px;
-  background: rgb(41, 116, 113);
+  background: rgb(72, 42, 0);
   color: #fff;
   margin: -20px -20px 0 -20px;
   font-weight: 300;
@@ -163,7 +126,7 @@ header .social .btn {
   height: 0;
   border-top: 7px solid transparent;
   border-bottom: 7px solid transparent;
-  border-left: 7px solid rgb(41, 116, 113);
+  border-left: 7px solid rgb(71, 42, 0);
 }
 #timeline .timeline-item .timeline-content.right {
   float: right;
@@ -173,15 +136,15 @@ header .social .btn {
   right: 45%;
   left: inherit;
   border-left: 0;
-  border-right: 7px solid rgb(41, 116, 113);
+  border-right: 7px solid rgb(71, 42, 0);
 }
 
 .btn {
   padding: 5px 15px;
   text-decoration: none;
   background: transparent;
-  border: 2px solid #f27c7c;
-  color: #f27c7c;
+  border: 2px solid #482a00;
+  color: #000000 !important;
   display: inline-block;
   position: relative;
   text-transform: uppercase;
@@ -194,10 +157,10 @@ header .social .btn {
   -moz-transition: background 0.3s ease;
   -ms-transition: background 0.3s ease;
   transition: background 0.3s ease;
-  -webkit-box-shadow: 2px 2px 0 #f27c7c;
-  -moz-box-shadow: 2px 2px 0 #f27c7c;
-  -ms-box-shadow: 2px 2px 0 #f27c7c;
-  box-shadow: 2px 2px 0 #f27c7c;
+  -webkit-box-shadow: 2px 2px 0 #482a00;
+  -moz-box-shadow: 2px 2px 0 #482a00;
+  -ms-box-shadow: 2px 2px 0 #482a00;
+  box-shadow: 2px 2px 0 #482a00;
 }
 .btn:hover {
   box-shadow: none;
@@ -226,7 +189,7 @@ header .social .btn {
     left: 10%;
     margin-left: -6px;
     border-left: 0;
-    border-right: 7px solid rgb(41, 116, 113);
+    border-right: 7px solid rgb(72, 42, 0);
   }
   #timeline .timeline-item .timeline-icon {
     left: 0;
