--- a/css/xceed/demo.css
+++ b/css/xceed/demo.css
@@ -62,11 +62,8 @@ a:hover, a:focus {
 }
 
 p {
-	padding: 0.1em;
-	font-style:italic;
-	font-size:16px;
-	overflow-y:auto;
-	max-height:320px;
+	padding: 0.1em !important;
+	
 }
 
 /* Header */
@@ -201,20 +198,20 @@ p {
 }
 /* Let's get this party started */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 8px;
 }
  
 /* Track */
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    -webkit-border-radius: 7px;
-    border-radius: 7px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 7px;
-    border-radius: 7px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
     background: rgba(255,255,255,0.8); 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
