--- a/css/eventIcons.css
+++ b/css/eventIcons.css
@@ -19,7 +19,10 @@
 	display: inline-block;
 	font-size: 0px;
 	cursor: pointer;
-	margin: 15px 30px;
+	margin-bottom:5px;
+	margin-top:25px;
+	margin-left: 30px;
+	margin-right: 30px;
 	width: 70px;
 	height: 70px;
 	border-radius: 50%;
