--- a/css/loader.css
+++ b/css/loader.css
@@ -4,24 +4,34 @@
 	width: 29px;
 	height: 29px;
 	position: relative;
-	border: 4px solid rgba(255,255,255,1);
+	border: 4px solid #d73e4d;
 	animation: cssload-loader 2.3s infinite ease;
-		-o-animation: cssload-loader 2.3s infinite ease;
-		-ms-animation: cssload-loader 2.3s infinite ease;
-		-webkit-animation: cssload-loader 2.3s infinite ease;
-		-moz-animation: cssload-loader 2.3s infinite ease;
+	-o-animation: cssload-loader 2.3s infinite ease;
+	-ms-animation: cssload-loader 2.3s infinite ease;
+	-webkit-animation: cssload-loader 2.3s infinite ease;
+	-moz-animation: cssload-loader 2.3s infinite ease;
 }
 
 .cssload-loader-inner {
 	vertical-align: top;
 	display: inline-block;
 	width: 100%;
-	background-color: rgb(255,255,255);
+	background-color: #d73e4d;
 	animation: cssload-loader-inner 2.3s infinite ease-in;
-		-o-animation: cssload-loader-inner 2.3s infinite ease-in;
-		-ms-animation: cssload-loader-inner 2.3s infinite ease-in;
-		-webkit-animation: cssload-loader-inner 2.3s infinite ease-in;
-		-moz-animation: cssload-loader-inner 2.3s infinite ease-in;
+	-o-animation: cssload-loader-inner 2.3s infinite ease-in;
+	-ms-animation: cssload-loader-inner 2.3s infinite ease-in;
+	-webkit-animation: cssload-loader-inner 2.3s infinite ease-in;
+	-moz-animation: cssload-loader-inner 2.3s infinite ease-in;
+}
+
+.events-loader {
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+
+	margin: auto;
 }
 
 
