--- a/css/loader.css
+++ b/css/loader.css
@@ -33,7 +33,15 @@
 
 	margin: auto;
 }
+.workshops-loader {
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 
+	margin: auto;
+}
 
 
 
