--- a/css/scroll.css
+++ b/css/scroll.css
@@ -14,9 +14,9 @@
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 6px;
     border-radius: 6px;
-    background: rgba(255,255,255,0.8); 
+    background: #d73e4d; 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
+	background: #d73e4d; 
 }
